--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ashley Brooks Portfolio</title>
+    <title>Ashley Brooks</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <h1>Under Construction</h1>
+    <h2>Check out my growth!</h2>
+    <p>Familiar with HTML, CSS, Bootstrap, JavaScript, Git, and GitHub currently.</p>
+    <h3>Connect with me:</h3>
+    <ul>
+        <li><a href="www.linkedin.com/in/ashleybrooks395">LinkedIn</a></li>
+        <li><a href="https://github.com/ashleybrooks395">GitHub</a></li>
+    </ul>
 </body>
 
 </html>
