--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <h1>Under Construction</h1>
-    <h2>Check out my growth!</h2>
+    <h2>Hi! My name is Ashley and I'm an aspiring web developer slowly building my portfolio. Thank you for visiting.
+        Stay tuned.</h2>
     <p>Familiar with HTML, CSS, Bootstrap, JavaScript, Git, and GitHub currently.</p>
     <h3>Connect with me:</h3>
     <ul>
