--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <p>Familiar with HTML, CSS, Bootstrap, JavaScript, Git, and GitHub currently.</p>
     <h3>Connect with me:</h3>
     <ul>
-        <li><a href="www.linkedin.com/in/ashleybrooks395">LinkedIn</a></li>
-        <li><a href="https://github.com/ashleybrooks395">GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/ashleybrooks395">LinkedIn</a></li>
+        <li><a href="https://www.github.com/ashleybrooks395">GitHub</a></li>
     </ul>
 </body>
 
