--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ashley Brooks</title>
+    <link rel="icon" href="Pastel Smiley Logo.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 
 <body>
@@ -14,10 +17,13 @@
         Stay tuned.</h2>
     <p>Familiar with HTML, CSS, Bootstrap, JavaScript, Git, and GitHub currently.</p>
     <h3>Connect with me:</h3>
-    <ul>
-        <li><a href="https://www.linkedin.com/in/ashleybrooks395">LinkedIn</a></li>
-        <li><a href="https://www.github.com/ashleybrooks395">GitHub</a></li>
-    </ul>
+    <a href="https://www.linkedin.com/in/ashleybrooks395"><img src="linkedin-logo-blue.png" alt="LinkedIn Logo"
+            width="75" height="75"></a></li>
+    <a href="https://www.github.com/ashleybrooks395"><img src="github-logo.png" alt="GitHub Logo" width="75"
+            height="75"></a></li>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
