--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ashley Brooks</title>
-    <link rel="icon" href="Pastel Smiley Logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="title-image.png" type="image/x-icon">
+    <!--figure out how to use bootstrap and css together, not enough color options. or figure out npm, re-install-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 
 <body>
-    <h1>Under Construction</h1>
-    <h2>Hi! My name is Ashley and I'm an aspiring web developer slowly building my portfolio. Thank you for visiting.
-        Stay tuned.</h2>
+    <h1 class="text-center" class="">Under Construction</h1>
+    <h3>Hi! My name is Ashley and I'm an aspiring web developer slowly building my portfolio. Thank you for visiting.
+        Stay tuned.</h3>
     <p>Familiar with HTML, CSS, Bootstrap, JavaScript, Git, and GitHub currently.</p>
-    <h3>Connect with me:</h3>
-    <a href="https://www.linkedin.com/in/ashleybrooks395"><img src="linkedin-logo-blue.png" alt="LinkedIn Logo"
-            width="75" height="75"></a></li>
-    <a href="https://www.github.com/ashleybrooks395"><img src="github-logo.png" alt="GitHub Logo" width="75"
+    <h5><b>Connect with me:</b></h5>
+    <a href="https://www.linkedin.com/in/ashleybrooks395"><img src="linkedin-logo.png" alt="LinkedIn Logo" width="75"
             height="75"></a></li>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"></script>
+    <a href="https://www.github.com/ashleybrooks395"><img src="GitHub-logo.png" alt="GitHub Logo" width="75"
+            height="75"></a></li>
+    <a href="mailto:hello@ashleybrooks.co" class="">Email</a>
+    <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
