--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <p>Familiar with HTML, CSS, Bootstrap, JavaScript, Git, and GitHub currently.</p>
     <h5><b>Connect with me:</b></h5>
     <a href="https://www.linkedin.com/in/ashleybrooks395"><img src="linkedin-logo.png" alt="LinkedIn Logo" width="75"
-            height="75"></a></li>
+            height="75"></a>
     <a href="https://www.github.com/ashleybrooks395"><img src="GitHub-logo.png" alt="GitHub Logo" width="75"
-            height="75"></a></li>
+            height="75"></a>
     <a href="mailto:hello@ashleybrooks.co" class="">Email</a>
     <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
