--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a href="https://www.linkedin.com/in/ashleybrooks395"><img src="linkedin.png" alt="LinkedIn Logo" width="75"
             height="75"></a>
     <a href="https://www.github.com/ashleybrooks395"><img src="github.png" alt="GitHub Logo" width="75" height="75"></a>
-    <a href="mailto:hello@ashleybrooks.co" class=""><img src="email.png">Email</a>
+    <a href="mailto:hello@ashleybrooks.co" class=""><img src="email.png" width="75" height="" 75>Email</a>
     <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
         </script>
